# Distribution-Ray-Tracing

./: CMakeLists.txt  README.txt  Slides_Project_2_Group_20.pptx  fragment_shader.glsl  glad.c  main.cpp  raytracer.cpp  raytracer.hpp  utilities.cpp  utilities.hpp  vertex_shader.glsl
